Implemetation of i18n, Validation, Register, Login